--- a/style.css
+++ b/style.css
@@ -22,52 +22,71 @@ body{
     justify-content: flex-start;
 }
   .header {
-    background-color: #ffffff;
-    padding: 0px 0px 30px 0px;
-  }
-  .logo-info {
-    padding: 7px;
+    background-color: #28282a;;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px 20px 20px;
+    background-color: #f0f0f0;
+  }
+  .nav-info {
+    display: flex;
+    align-items: center;
+
   }
   .logo-block {
     display: flex;
     align-items: center;
   }
   .logo-image{
-    width: 94px;
+    margin-left: 25px;
+   
+    width: 80px;
+    height: 64px;
   }
   .logo-title {
-    margin: 0;
-    padding: 0;
-    line-height: 1.5em;
-    color: #333;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 34px;
+    margin-left: 10px;
+    color: #fff;
     text-transform: uppercase;
-    font-size: calc(1vw + 1em);
+    align-items: center;
   }
   .logo-description {
     color: #888;
     font-size: .8em;
   }
   .nav-menu {
+    margin-left: 75px;
+    margin-right: 75px; 
     background-color: #28282a;
-    padding: 10px;
-  }
-  .menu-list {
     padding: 0;
+    position: relative;
+    width: 1770px;
+    height: 110px;
+    backdrop-filter: blur(10px);
+    border-radius: 0px 0px 15px 15px;
+  }
+  
+  .menu-list {
+    list-style: none;
     margin: 0;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-flow: row wrap;
   }
+
   .menu-item {
+    margin-left: 20px;
     display: flex;
-    padding: 7px 7px;
     list-style: none;
     color: #fff;
   }
+
+  .menu-item:first-child {
+    margin-left: 0;
+  }
+
   .menu-item:hover {
     background-color: #c7d1d6;
   }
@@ -90,6 +109,7 @@ body{
   .offer-area {
     width: 100%;
     height: 600px;
+    margin-top: 20px;
   }
   .offer-wrapper {
     position: relative;
